--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/next": "^4.2.12",
     "@mantine/notifications": "^4.2.12",
     "cookies-next": "^2.1.1",
+    "lemon.markets.js": "^1.1.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
